--- a/requirements.txt
+++ b/requirements.txt
@@ -86,6 +86,7 @@ pyproj == 3.5.0
 pyshp == 2.3.1
 python-dateutil == 2.8.2
 pytz == 2023.3
+pywin32 == 306
 PyYAML == 6.0.1
 pyzmq == 25.1.1
 referencing == 0.30.2
@@ -110,7 +111,6 @@ tensorboard == 2.13.0
 tensorboard-data-server == 0.7.1
 tensorflow == 2.13.0
 tensorflow-estimator == 2.13.0
-tensorflow-intel == 2.13.0
 tensorflow-io-gcs-filesystem == 0.31.0
 termcolor == 2.3.0
 threadpoolctl == 3.2.0
@@ -129,6 +129,5 @@ werkzeug == 2.3.7
 wheel == 0.41.2
 widgetsnbextension == 4.0.8
 wrapt == 1.15.0
-xgboost == 1.7.6
 xyzservices == 2023.10.0
 zipp == 3.16.2
